[tool.poetry]
name = "mortgage_madness"
version = "0.1.0"
description = ""
authors = ["Ben Warren <bwarren2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"
jupyterlab = "^3.1.10"
matplotlib = "^3.4.3"
numpy-financial = "^1.0.0"
nb-black = "^1.0.7"
black = "^21.8b0"
plotly = "^5.3.1"
pandas-datareader = "^0.10.0"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
